[package]
name = "bismit"
version = "0.0.1"
authors = ["Nick Sanders <github.com/c0gent>"]

[features]
profile = ["cpuprofiler"]

[dependencies.ocl]
version = "*"
path = "../ocl/ocl"
# git = "https://github.com/cogciprocate/ocl.git"
# features = ["kernel_debug_sleep", "kernel_debug_print"]

[dependencies]
ocl-extras = { path = "../ocl/ocl/ocl-extras" }
bitflags = "*"
rand = "*"
num = "*"
libc = "*"
enum_primitive = "*"
find_folder = "*"
time = "*"
twox-hash = "*"
colorify = "*"
futures = "*"
futures-cpupool = "*"
tokio-core = "*"
crossbeam = "*"
cpuprofiler = { version = "*", optional = true }
failure = "*"

[dev-dependencies]
qutex = "*"

[workspace]
members = ["eval"]
