[package]
name = "bismit"
version = "0.0.1"
authors = ["Nick Sanders <cogciprocate@gmail.com>"]
description = "Biologically Inspired Sensory Motor Inference Toolkit"
documentation = "https://docs.rs/bismit"
homepage = "https://github.com/cogciprocate/bismit"
repository = "https://github.com/cogciprocate/bismit"
readme = "README.md"
# keywords = []
license = "GPL-2.0"
exclude = ["target/*", "*.png", "bak/*"]
# categories = []

[features]
profile = ["cpuprofiler"]
# Enables evaluation features, useful for testing and analysis.
eval = []

default = ["eval"]

[dependencies]
# ocl = { version = "*", git = "https://github.com/cogciprocate/ocl" }
ocl-extras = { path = "../ocl/ocl/ocl-extras" }
bitflags = "*"
rand = "*"
num = "*"
libc = "*"
enum_primitive = "*"
find_folder = "*"
time = "*"
twox-hash = "*"
colorify = "*"
# futures = "0.1"
futures-cpupool = "*"
tokio-core = "*"
crossbeam = "*"
cpuprofiler = { version = "*", optional = true }
failure = "*"

[dependencies.ocl]
version = "*"
path = "../ocl/ocl"
# git = "https://github.com/cogciprocate/ocl.git"
# branch = "futures-0.2"
# features = ["kernel_debug_sleep", "kernel_debug_print"]

[dependencies.futures]
version = "~0.2.1"
git = "https://github.com/rust-lang-nursery/futures-rs"
# path = "../../futures-rs/futures"

# [dev-dependencies]
# qutex = "*"

[dev-dependencies.qutex]
version = "*"
path = "../qutex"

[workspace]
members = ["eval"]
