[package]
name = "eval"
version = "0.0.1"
authors = ["Nick Sanders <cogciprocate@gmail.com>"]

[dependencies]
# vibi = { path = "../../vibi", features = ["eval"] }
vibi = { version = "*", git = "https://github.com/cogciprocate/vibi", features = ["eval"] }
rand = "0.5"
log = "*"
env_logger = "*"
clap = "*"
colorify = { version = "~0.2.3", features = ["enable_windows"] }
# colorify = { path = "../../colorify", features = ["enable_windows"] }
# qutex = "*"
smallvec = "*"
# ansi_term = "*"

[dependencies.qutex]
version = "*"
# path = "../../qutex"
git = "https://github.com/cogciprocate/qutex"

# [replace]
# "qutex:0.1.1" = { git = "https://github.com/cogciprocate/qutex" }
# "cl-sys:0.3.0" = { git = "https://github.com/cogciprocate/cl-sys" }
# "ocl-core:0.5.1" = { git = "https://github.com/cogciprocate/ocl-core" }